feat: Initial migration from whatsapp-web.js to Baileys

--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@whiskeysockets/baileys": "^6.7.18",
     "dotenv": "^16.5.0",
     "is-online": "^11.0.0",
     "node-cron": "^3.0.3",
-    "puppeteer": "^18.2.1",
     "qrcode-terminal": "^0.12.0",
-    "uuid": "^11.1.0",
-    "whatsapp-web.js": "^1.27.0"
+    "uuid": "^11.1.0"
   }
 }
