--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@ node_modules/
 .env
 
 # sessoes do whatsapp
-.wwebjs_cache/
-.wwebjs_auth/
+auth_info_baileys/
 
 # dados persistentes
 /src/data/*.json
