--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.5.0",
     "is-online": "^11.0.0",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "qrcode-terminal": "^0.12.0",
     "uuid": "^11.1.0"
   }
