--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.18",
+    "better-sqlite3": "^11.10.0",
     "dotenv": "^16.5.0",
     "is-online": "^11.0.0",
     "node-cron": "^3.0.3",
